# SD2

./: CMakeLists.txt  LICENSE  MySQLPaperQuery.h  README.md  ccf.json  scholarlens_python.cpp  server.py  utility.h
SD2/: html.css
SD2/js/: add_hints.js  html.css  myjs.js  sunburst copy.js  sunburst.js  sunburst_down.js  sunburst_down_second.js  sunburst_drag.js  sunburst_drag_logo.js  sunburst_group_histogram.js  sunburst_up copy.js  sunburst_up.js  sunburst_up_second.js  upset.html
SD2Query/: CMakeLists.txt  MySQLPaperQuery.h  SD2Query.cpp  utility.h
build_database/: BuildDatabase.cpp  CMakeLists.txt  build_ccf.py
build_database/mag_papers/: mag_papers_1.txt
data/authors_info_lists/: Aaron Courville.txt  Alexander Lex.txt  Andrew Lumsdaine.txt  Attila Gabor Gyulassy.txt  B. Aditya Prakash.txt  Bingsheng He, 何丙胜.txt  Carlos Roberto Silveira Correa .txt  Carlos Scheidegger.txt  Chao Huang.txt  Chaoli Wang.txt  Christos Faloutsos.txt  Chuxu Zhang.txt  Danai Koutra.txt  Daniel Archambault.txt  Danny Chen.txt  Deepayan Chakrabarti.txt  Deng Cai.txt  Dhabaleswar K. Panda.txt  Dong Wang.txt  Eric Xing.txt  Evangelos E. Papalexakis.txt  Feng Zhang.txt  Gennady Andrienko.txt  Han-Wei Shen.txt  Hanghang Tong.txt  Hanqi Guo.txt  Hanspeter Pfister.txt  Huamin Qu.txt  Huy T. Vo.txt  Ian Goodfellow.txt  Ian T. Foster.txt  Ibrahim Kamel.txt  Jack Dongarra.txt  Jean-Daniel Fekete.txt  Jeffrey Heer.txt  Ji Soo Yi.txt  Jian Pei.txt  Jian Zhao.txt  Jiawei Han.txt  Jidong Zhai.txt  (+55 more)
data/co_authors_info_lists/: -0YOKRoAAAAJ.txt  -2P6PfoAAAAJ.txt  -3d0B50AAAAJ.txt  -5hf26cAAAAJ.txt  -5n02zEAAAAJ.txt  -6Pj3IYAAAAJ.txt  -7fKuxwAAAAJ.txt  -BVI58oAAAAJ.txt  -DAxp-cAAAAJ.txt  -EKotCgAAAAJ.txt  -FcA6oIAAAAJ.txt  -GOFeFIAAAAJ.txt  -JKuWIYAAAAJ.txt  -JOkpfQAAAAJ.txt  -Km_NFkAAAAJ.txt  -LGFBdUAAAAJ.txt  -MKDCgIAAAAJ.txt  -N-_kgsAAAAJ.txt  -NNzn0MAAAAJ.txt  -NXsLG4AAAAJ.txt  -OPkDrYAAAAJ.txt  -TEq9SwAAAAJ.txt  -YCSfWoAAAAJ.txt  -YNowMsAAAAJ.txt  -ZI3dNIAAAAJ.txt  -ZLvUiEAAAAJ.txt  -_8lJhoAAAAJ.txt  -b2BjHkAAAAJ.txt  -ektYncAAAAJ.txt  -epU9OsAAAAJ.txt  -gquq44AAAAJ.txt  -q90a0EAAAAJ.txt  -uRoVEUAAAAJ.txt  -wKpBNkAAAAJ.txt  -x_FW-wAAAAJ.txt  -ynq1aUAAAAJ.txt  00RihbwAAAAJ.txt  02HbxoQAAAAJ.txt  02f3kAQAAAAJ.txt  04TuVhEAAAAJ.txt  (+2968 more)
data/venues_info_lists/: Human-Computer Interaction.txt  IEEE Transactions on Visualization and Computer Graphics.txt  human factors in computing systems.txt  visual analytics science and technology.txt
interface/: SD2.html  scholarlens.html  sunburst.css
interface/js/: sunburst.js  sunburst_down_second.js  sunburst_drag_logo.js  sunburst_up.js  sunburst_up_second.js
server/: requirements.txt  server.py
